--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build ./frontend/index.html",
     "start": "node server.js"
   },
   "repository": {
