--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.1",
     "parcel-bundler": "^1.12.3",
     "vue": "^2.6.10",
-    "vue-hot-reload-api": "^2.3.3"
+    "vue-hot-reload-api": "^2.3.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
