--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/Elliot128/BackbarCodingChallenge#readme",
   "dependencies": {
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.1.0",
+    "eslint-plugin-vue": "^5.2.3",
     "express": "^4.17.1",
     "parcel-bundler": "^1.12.3",
     "vue": "^2.6.10",
