--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx parcel build ./frontend/index.html",
+    "build": "npx parcel build ./frontend/index.html --public-url /dist/",
     "start": "node server.js"
   },
   "repository": {
