--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Elliot128/BackbarCodingChallenge#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.1.0",
