--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^6.1.0",
     "eslint-plugin-vue": "^5.2.3",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "parcel-bundler": "^1.12.3",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.3",
