--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
     "babel-preset-env": "^1.7.0",
+    "crypto": "^1.0.1",
     "eslint": "^6.1.0",
     "eslint-plugin-vue": "^5.2.3",
     "express": "^4.17.1",
