--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "babel-eslint": "^10.0.2",
     "babel-preset-env": "^1.7.0",
     "crypto": "^1.0.1",
-    "eslint": "^6.1.0",
-    "eslint-plugin-vue": "^5.2.3",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "parcel-bundler": "^1.12.3",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.3",
-    "vuex": "^3.1.1"
-  },
-  "devDependencies": {
+    "vuex": "^3.1.1",
     "@vue/component-compiler-utils": "^3.0.0",
     "babel-core": "^6.26.3",
     "vue-template-compiler": "^2.6.10"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-plugin-vue": "^5.2.3"
   }
 }
